# easylink

./: .flake8  .gitignore  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  Jenkinsfile  LICENSE  Makefile  README.md  README.rst  build-doc  pipeline_dummy.yaml  pipeline_splink_dummy.yaml  pyproject.toml  python_versions.json  pytype.cfg  run_step.sh  setup.py  update_readme.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml  deploy.yml  update_readme.yml
docs/: Makefile  nitpick-exceptions
docs/source/: conf.py  glossary.rst  index.rst  installation.rst
pvs_like_case_study_sample_data/: .dockerignore  Dockerfile  pvs_like_case_study_sample_data.py
pvs_like_case_study_sample_data/docker/: Dockerfile
pvs_like_case_study_sample_data/input_data/: census_2030_ground_truth_sample.parquet  census_2030_sample.parquet
results/2023_08_28_13_19_00/: environment.yaml
sample_data/pvs_like_case_study/: 2030_census_bad_columns.parquet  simulated_census_2030.parquet  simulated_geobase_reference_file.parquet
src/easylink/: __about__.py  __init__.py  cli.py  configuration.py  graph_components.py  implementation.py  implementation_metadata.yaml  pipeline.py  pipeline_graph.py  pipeline_schema.py  pipeline_schema_constants.py  rule.py  runner.py  step.py  test.py
src/linker/: __about__.py  __init__.py  cli.py  cli_utils.py  configuration.py  default_environment.yaml  implementation.py  implementation_metadata.yaml  pipeline.py  pipeline_schema.py  pipeline_schema_constants.py  rule.py  run_step.sh  runner.py  step.py
src/linker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
steps/pvs_like_case_study_sample_data/: Dockerfile  pvs_like_case_study_sample_data.py
tests/: conftest.py  test_env_utils.py  test_pipeline_utils.py
workflow/: Snakefile
(+359 files in other folders)
